# dt4mob-simulation

./: .gitignore
Simulation-inserter/: .gitignore  .sumocfg  ca.pem  delete.py  dockerfile  main.py  osm.net.xml  pyproject.toml  routes.rou.xml
Simulation-inserter/inductionloops/: detectors.det.xml
Simulation-inserter/src/Models/: common.py  ditto.py  traci_vehicle.py  vehicle_message.py
Simulation-inserter/src/services/ditto_api/: __init__.py  ditto_api.py
Simulation-inserter/src/services/envelope_formatter/ditto_thing/: DittoProtocol.py  __init__.py
Simulation-inserter/src/services/geotile/: geotiles_conversor.py
Simulation-inserter/src/services/sender/: __init__.py  mqtt.py
Simulation-inserter/src/services/simulator/: __init__.py  simulator.py
Simulation-inserter/src/settings/: __init__.py  ditto.py  sender.py  simulator.py
simulation/: Dockerfile  README.md  detectors.det.xml  main.py
simulation/randomTrips/: random.sh
simulation/randomTrips/routeSampler/: edgedata4routeSampler_clean.xml  sampler.sh
