[project]
name = "sumoinserter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eclipse-sumo>=1.25.0",
    "gmqtt>=0.7.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "traci>=1.25.0",
]
